# venue404

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  eslint.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  prd.txt  render.yaml  tsconfig.base.json
apps/api/: .env.example  .env.test  Dockerfile  alembic.ini  fly.toml  pyproject.toml  run_job.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_auth_schema.py  0002_signup_trigger.py  0003_profile_email.py  0004_venue_schema.py  0005_add_mixed_pricing_mode_to_venues.py  0005_booking_schema.py  0005_owner_status.py  0006_expand_booking_schema.py  0006_fix_owner_trigger.py  004b8919fa8e_remove_old_blocked_dates.py  014af2456033_merge_venue_pricing_and_owner_trigger_.py  108e5e92fd6e_notification_tables_added.py  1b6ee7242fff_merge_heads.py  23f89ef3a202_update_booking_status_history_.py  3dce944fa4c3_change_of_schema_name_from_base_price_.py  523613d60f75_add_last_completed_step_to_venue.py  56b83e0f7f4a_payment_and_booking_schema_code_update_.py  6dadfa890c15_venue_category_table.py  914d6f7a8b9c_add_booking_constraints_and_indices.py  adc8fe218fd7_search_index_table_venue_table_column_.py  bf6b28a6d1fd_amenity_name_uniqueness_partial_index_.py  (+5 more)
apps/api/app/: main.py
apps/api/tests/: conftest.py  test_admin_immutability.py  test_auth.py  test_booking.py  test_booking_integration.py  test_conflict_flow.py  test_email.py  test_hold_expiry.py  test_notification_templates.py  test_state_machine.py  test_suspended_user.py  test_venue.py  test_venue_visibility.py
docs/: AUTH_FLOW.md  (+5 more)
(+200 files in other folders)
