[project]
name = "venue404-api"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg2-binary>=2.9.0",
  "pydantic-settings>=2.3.0",
  "email-validator>=2.2.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "stripe>=9.0.0",
  "apscheduler>=3.10.0",
  "resend>=2.0.0",
  "cloudinary>=1.40.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.0",
]
